made some changes to the way epochs are kept track of

--- a/tensorflow/training_code.ipynb
+++ b/tensorflow/training_code.ipynb
@@ -172,7 +172,9 @@
     "# legacy_training decides whether to use the old way of training, with GradientTape etc\n",
     "# or the more standard model.fit() approach.\n",
     "# The former was used by the original Waller code.\n",
-    "legacy_training = True"
+    "legacy_training = True\n",
+    "smallset = False\n",
+    "backup_location = None"
    ]
   },
   {
@@ -285,7 +287,9 @@
     "    crazy_external_noise_addition = True\n",
     "    training_noise_sigma=11/255\n",
     "    pooling='average'\n",
-    "    legacy_training = False"
+    "    legacy_training = False\n",
+    "    smallset=True\n",
+    "    backup_location = \"saved_models/multiwiener_nV3_probe_noisy5_new_way2/backup\""
    ]
   },
   {
@@ -442,10 +446,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16595\n",
-      "5531\n",
-      "5532\n",
-      "1844\n"
+      "20\n",
+      "5\n",
+      "7\n",
+      "2\n"
      ]
     }
    ],
@@ -456,9 +460,9 @@
     "\n",
     "\n",
     "# Split into train/validation\n",
-    "if preset == \"noisy_5_test\":\n",
+    "if smallset:\n",
     "    val_size = int(5)\n",
-    "    train_ds = dataset.skip(val_size).take(10)\n",
+    "    train_ds = dataset.skip(val_size).take(20)\n",
     "else:\n",
     "    val_size = int(image_count * 0.25)\n",
     "    # took a small number of samples for test training to make epochs go faster\n",
@@ -591,7 +595,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> \u001b[0;32m/tmp/ipykernel_1007403/3845168668.py\u001b[0m(30)\u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n",
+      "> \u001b[0;32m/tmp/ipykernel_2179836/3845168668.py\u001b[0m(30)\u001b[0;36m<cell line: 7>\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32m     28 \u001b[0;31m\u001b[0;31m# handle multiple sets of PSFs:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m     29 \u001b[0;31m    \u001b[0;31m# FIXME: magic number 63 is 3*the number of PSFs per metafile\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m---> 30 \u001b[0;31m    \u001b[0;32mif\u001b[0m \u001b[0mmultiple_psfs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -693,7 +697,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f6e28b34bb0>"
+       "<matplotlib.image.AxesImage at 0x7fc25a080820>"
       ]
      },
      "execution_count": 27,
@@ -783,7 +787,7 @@
      "text": [
       "--Return--\n",
       "None\n",
-      "> \u001b[0;32m/tmp/ipykernel_1007403/3554517495.py\u001b[0m(1)\u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n",
+      "> \u001b[0;32m/tmp/ipykernel_2179836/3554517495.py\u001b[0m(1)\u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32m----> 1 \u001b[0;31m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m      2 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m      3 \u001b[0;31m\u001b[0;32mif\u001b[0m \u001b[0mmodel_type\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'unet'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1364,10 +1368,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 41,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -1382,7 +1384,7 @@
      "text": [
       "--Return--\n",
       "None\n",
-      "> \u001b[0;32m/tmp/ipykernel_1007403/2504207362.py\u001b[0m(4)\u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n",
+      "> \u001b[0;32m/tmp/ipykernel_2179836/4051516729.py\u001b[0m(4)\u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n",
       "\u001b[0;32m      2 \u001b[0;31m\u001b[0;31m# Prepare EpochLogger and load weights, if necessary, into the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m      3 \u001b[0;31m\u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'debug'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\u001b[0;32m----> 4 \u001b[0;31m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
@@ -1391,20 +1393,22 @@
       "\u001b[0m\n",
       "ipdb> c\n",
       "done all the crap\n",
-      "(None, 800, 1280, 1)\n"
-     ]
-    },
-    {
-     "ename": "NotFoundError",
-     "evalue": "Unsuccessful TensorSliceReader constructor: Failed to find any matching files for saved_models/multiwiener_nV3_probe_noisy5_new_way2/model_weights",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNotFoundError\u001b[0m                             Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [40]\u001b[0m, in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    103\u001b[0m     model\u001b[38;5;241m.\u001b[39mcompile(optimizer, loss\u001b[38;5;241m=\u001b[39mloss_func)\n\u001b[1;32m    104\u001b[0m \u001b[38;5;66;03m#     print(model_checkpoint_callback.best)\u001b[39;00m\n\u001b[0;32m--> 106\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_weights\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtraining_location\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    107\u001b[0m     \u001b[38;5;66;03m# weirdly, model keeps restarting its training from the first epoch\u001b[39;00m\n\u001b[1;32m    108\u001b[0m     \u001b[38;5;66;03m# made the modification below based on user30012's answer at\u001b[39;00m\n\u001b[1;32m    109\u001b[0m     \u001b[38;5;66;03m# https://stackoverflow.com/questions/45393429/keras-how-to-save-model-and-continue-training\u001b[39;00m\n\u001b[1;32m    110\u001b[0m \u001b[38;5;66;03m#     score = model.evaluate(val_ds)\u001b[39;00m\n\u001b[1;32m    111\u001b[0m \u001b[38;5;66;03m#     model_checkpoint_callback.best = score\u001b[39;00m\n\u001b[1;32m    113\u001b[0m     \u001b[38;5;28mprint\u001b[39m(model_checkpoint_callback\u001b[38;5;241m.\u001b[39mbest)\n",
-      "File \u001b[0;32m~/miniconda3/envs/tf/lib/python3.9/site-packages/keras/utils/traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     67\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m     72\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[0;32m~/miniconda3/envs/tf/lib/python3.9/site-packages/tensorflow/python/training/py_checkpoint_reader.py:31\u001b[0m, in \u001b[0;36merror_translator\u001b[0;34m(e)\u001b[0m\n\u001b[1;32m     27\u001b[0m error_message \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(e)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnot found in checkpoint\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m error_message \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFailed to find any \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmatching files for\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01min\u001b[39;00m error_message:\n\u001b[0;32m---> 31\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m errors_impl\u001b[38;5;241m.\u001b[39mNotFoundError(\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, error_message)\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSliced checkpoints are not supported\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m error_message \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m     33\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mData type \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnot \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     35\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msupported\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;129;01min\u001b[39;00m error_message:\n\u001b[1;32m     36\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m errors_impl\u001b[38;5;241m.\u001b[39mUnimplementedError(\u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;28;01mNone\u001b[39;00m, error_message)\n",
-      "\u001b[0;31mNotFoundError\u001b[0m: Unsuccessful TensorSliceReader constructor: Failed to find any matching files for saved_models/multiwiener_nV3_probe_noisy5_new_way2/model_weights"
+      "(None, 800, 1280, 1)\n",
+      "Epoch 20/100\n",
+      "7/7 [==============================] - ETA: 0s - loss: 0.3964\n",
+      "Epoch 20: saving model to saved_models/multiwiener_nV3_probe_noisy5_new_way2/model_weights\n",
+      "7/7 [==============================] - 14s 1s/step - loss: 0.3964 - val_loss: 0.8484\n",
+      "Epoch 21/100\n",
+      "7/7 [==============================] - ETA: 0s - loss: 0.4385\n",
+      "Program interrupted. (Use 'cont' to resume).\n",
+      "> \u001b[0;32m/home/dshteinbok/miniconda3/envs/tf/lib/python3.9/site-packages/tensorflow/python/ops/gen_resource_variable_ops.py\u001b[0m(527)\u001b[0;36mread_variable_op\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m    525 \u001b[0;31m      _result = pywrap_tfe.TFE_Py_FastPathExecute(\n",
+      "\u001b[0m\u001b[0;32m    526 \u001b[0;31m        _ctx, \"ReadVariableOp\", name, resource, \"dtype\", dtype)\n",
+      "\u001b[0m\u001b[0;32m--> 527 \u001b[0;31m      \u001b[0;32mreturn\u001b[0m \u001b[0m_result\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    528 \u001b[0;31m    \u001b[0;32mexcept\u001b[0m \u001b[0m_core\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_NotOkStatusException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m    529 \u001b[0;31m      \u001b[0m_ops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraise_from_not_ok_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n",
+      "ipdb> q\n"
      ]
     }
    ],
@@ -1506,24 +1510,34 @@
     "    loss_func = ut.SSIMLoss_l1_indicator_Class(indicator_reshaped)\n",
     "#     loss_func=ut.Loss_l1_indicator_generator(indicator_reshaped, training=False)\n",
     "    # load the dataset here? Necessary to have separate x and y datasets because that's how fit() takes it\n",
+    "    \n",
     "    model_checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(\n",
     "    filepath=training_location,\n",
     "    save_weights_only=True,\n",
     "    verbose=1)\n",
     "    \n",
+    "    if backup_location is None:\n",
+    "        backup_restore_callback = tf.keras.callbacks.BackupAndRestore(backup_dir=training_location)\n",
+    "    else:\n",
+    "        backup_restore_callback = tf.keras.callbacks.BackupAndRestore(backup_dir=backup_location)\n",
+    "#     model_checkpoint_callback\n",
+    "    \n",
     "    model.compile(optimizer, loss=loss_func)\n",
     "#     print(model_checkpoint_callback.best)\n",
     "\n",
-    "    model.load_weights(training_location)\n",
+    "#     model.load_weights(training_location)\n",
     "    # weirdly, model keeps restarting its training from the first epoch\n",
     "    # made the modification below based on user30012's answer at\n",
     "    # https://stackoverflow.com/questions/45393429/keras-how-to-save-model-and-continue-training\n",
     "#     score = model.evaluate(val_ds)\n",
     "#     model_checkpoint_callback.best = score\n",
     "    \n",
-    "    print(model_checkpoint_callback.best)\n",
-    "    model.fit(train_ds, epochs=num_epochs, callbacks=[model_checkpoint_callback], \n",
-    "             validation_data=val_ds, initial_epoch=tf.keras.models.get_)"
+    "#     epochlogger = el.BaseEpochLogger(model, epochlog_location, training_location)\n",
+    "#     epochlogger.load_weights()\n",
+    "    \n",
+    "#     print(model_checkpoint_callback.best)\n",
+    "    model.fit(train_ds, epochs=num_epochs, callbacks=[model_checkpoint_callback, backup_restore_callback], \n",
+    "             validation_data=val_ds, verbose=1)"
    ]
   },
   {
