moved files that used to reside outside the project, modified refrerences to point to them, upddated requirements to include my own package

--- a/common/Interpolation Test.ipynb
+++ b/common/Interpolation Test.ipynb
@@ -22,8 +22,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psf_directory = \"/home/dshteinbok/nV3_PSFs_flat\"\n",
-    "psf_meta = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\""
+    "# psf_directory = \"/home/dshteinbok/nV3_PSFs_flat\"\n",
+    "psf_directory = \"../data/nV3_PSFs_flat\"\n",
+    "# psf_meta = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\"\n",
+    "psf_meta = \"../data/nV3_PSFs_flat_meta/metafile.csv\""
    ]
   },
   {
