--- a/common/Making (and testing the making of) a Mastermat.ipynb
+++ b/common/Making (and testing the making of) a Mastermat.ipynb
@@ -32,8 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psfs_directory = \"/home/dshteinbok/nV3_PSFs_flat\"\n",
-    "psf_meta_path = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\"\n",
+    "# psfs_directory = \"/home/dshteinbok/nV3_PSFs_flat\"\n",
+    "psfs_directory = \"../data/nV3_PSFs_flat\"\n",
+    "# psf_meta_path = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\"\n",
+    "psf_meta_path = \"../data/nV3_PSFs_flat_meta/metafile.csv\"\n",
     "img_dims = (800, 1280)\n",
     "obj_dims = (640, 1024)\n",
     "metaman = load_PSFs.MetaMan(psf_meta_path) "
