--- a/common/My SVD.ipynb
+++ b/common/My SVD.ipynb
@@ -53,11 +53,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "psf_directory = \"/home/dshteinbok/nV3_PSFs\"\n",
+    "# psf_directory = \"/home/dshteinbok/nV3_PSFs\"\n",
+    "psf_directory = \"../data/nV3_PSFs\"\n",
     "# psf_directory = \"/home/dshteinbok/nV3_PSFs_flat\"\n",
     "#psf_directory = \"/home/dshteinbok/nV3_PSFs_large\"\n",
     "# psf_meta = \"/home/dshteinbok/nV3_PSFs_meta/PSF_Shifts.csv\"\n",
-    "psf_meta = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\"\n",
+    "psf_meta = \"../data/nV3_PSFs_flat_meta/metafile.csv\"\n",
     "# TODO: where to save\n",
     "\n",
     "# (height, width)\n",
