--- a/common/One Shot SVD.ipynb
+++ b/common/One Shot SVD.ipynb
@@ -80,13 +80,15 @@
    ],
    "source": [
     "pdb.set_trace()\n",
-    "# h, weights = one_shot_svd.generate_model(\"/home/dshteinbok/nV3_PSFs\", \"/home/dshteinbok/nV3_PSFs_meta/PSF_Shifts.csv\", \n",
+    "# h, weights = one_shot_svd.generate_model(\"../data/nV3_PSFs\", \"../data/nV3_PSFs_meta/PSF_Shifts.csv\", \n",
     "#                                          (800,1280), (640,1024))\n",
-    "# h, weights = one_shot_svd.generate_model(\"/home/dshteinbok/nV3_PSFs_large\", \"/home/dshteinbok/nV3_PSFs_meta/PSF_Shifts.csv\", \n",
+    "# h, weights = one_shot_svd.generate_model(\"../data/nV3_PSFs_large\", \"../data/nV3_PSFs_meta/PSF_Shifts.csv\", \n",
     "#                                           (800,1280), (640,1024))\n",
-    "h, weights = one_shot_svd.generate_model(\"/home/dshteinbok/nV3_PSFs_flat\", \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\", \n",
+    "# h, weights = one_shot_svd.generate_model(\"../data/nV3_PSFs_flat\", \"../data/nV3_PSFs_flat_meta/metafile.csv\", \n",
+    "#                                           (800,1280), (640,1024))\n",
+    "h, weights = one_shot_svd.generate_model(\"../data/nV3_PSFs_flat\", \"../data/nV3_PSFs_flat_meta/metafile.csv\", \n",
     "                                          (800,1280), (640,1024))\n",
-    "# one_shot_svd.generate_and_save(\"/home/dshteinbok/nV3_PSFs_flat\", \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\", \n",
+    "# one_shot_svd.generate_and_save(\"../data/nV3_PSFs_flat\", \"../data/nV3_PSFs_flat_meta/metafile.csv\", \n",
     "#                                           (800,1280), (640,1024), \"../data/nV3_flat_h.mat\", \"../data/nV3_flat_weights.mat\")\n",
     "# one_shot_svd.save_generated(h, weights, \"../data/nV3_flat_h.mat\", \"../data/nV3_flat_weights.mat\")"
    ]
