--- a/common/process_psf_for_svd.ipynb
+++ b/common/process_psf_for_svd.ipynb
@@ -592,7 +592,7 @@
     "#registered_psfs_path = '/home/kyrollos//LearnedMiniscope3D/MultiWiener/multiwienernet/data/PSFs/9_psfs/multiWienerPSFStack_40z.mat'\n",
     "\n",
     "#my nonsense hardcoded path:\n",
-    "registered_psfs_path = '/home/dshteinbok/LearnedMiniscope2D/MultiWiener/multiwienernet/data/PSFs/9_psfs/multiWienerPSFStack_40z_aligned.mat'\n",
+    "registered_psfs_path = '../data/LearnedMiniscope2D/MultiWiener/multiwienernet/data/PSFs/9_psfs/multiWienerPSFStack_40z_aligned.mat'\n",
     "\n",
     "psf_name='multiWienerPSFStack_40z'\n",
     "\n",
@@ -989,7 +989,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x=(plt.imread('/home/dshteinbok/MultiWienerNet/data/hydra3.jpg'))\n",
+    "x=(plt.imread('../data/MultiWienerNet/data/hydra3.jpg'))\n",
     "# x=(plt.imread('/home/kyrollos/MultiWienerNet/data/hydra3.jpg'))\n",
     "x=cv.resize(x,(h.shape[1],h.shape[0]))\n",
     "x=np.mean(x,2)"
@@ -1431,7 +1431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scipy.io.loadmat(\"/home/dshteinbok/MultiWienerNet/data/SVD_2_5um_PSF_5um_1_ds4_dsz1_comps_green_SubAvg.mat\")"
+    "scipy.io.loadmat(\"../data/MultiWienerNet/data/SVD_2_5um_PSF_5um_1_ds4_dsz1_comps_green_SubAvg.mat\")"
    ]
   }
  ],
