--- a/tensorflow/Image Denoising Experiments.ipynb
+++ b/tensorflow/Image Denoising Experiments.ipynb
@@ -52,8 +52,8 @@
    ],
    "source": [
     "to_reconstruct_index = 9\n",
-    "folderpath = \"/home/dshteinbok/real_images_unpadded/\"\n",
-    "# folderpath = \"/home/dshteinbok/real_images/\"\n",
+    "folderpath = \"../data/real_images_unpadded/\"\n",
+    "# folderpath = \"../data/real_images/\"\n",
     "# to_reconstruct = imageio.imread(folderpath+\"image_\"+str(to_reconstruct_index)+\".png\")\n",
     "to_reconstruct = imageio.imread(folderpath+\"isxd_\"+str(to_reconstruct_index)+\".png\")\n",
     "\n",
