--- a/tensorflow/Simulation Playground.ipynb
+++ b/tensorflow/Simulation Playground.ipynb
@@ -35,7 +35,7 @@
    "source": [
     "# Generate the image with delta functions, based on the shifts of our PSFs\n",
     "# First, we need to get the shifts themselves\n",
-    "metaman = load_PSFs.MetaMan(\"/home/dshteinbok/nV3_PSFs_flat_meta/metafile.csv\")\n",
+    "metaman = load_PSFs.MetaMan(\"../data/nV3_PSFs_flat_meta/metafile.csv\")\n",
     "\n",
     "shifts = metaman.shifts\n",
     "\n",
