--- a/tensorflow/Troubleshooting NN.ipynb
+++ b/tensorflow/Troubleshooting NN.ipynb
@@ -131,7 +131,8 @@
    "source": [
     "import imageio\n",
     "import sys\n",
-    "sys.path.append(\"/home/dshteinbok/denoising_experiments/\")\n",
+    "# sys.path.append(\"../data/denoising_experiments/\")\n",
+    "sys.path.append(\"../common/\")\n",
     "import denoising\n",
     "test_img = imageio.imread('../data/nV3_mastermat_probe_unshifted/100.png')"
    ]
