--- a/tensorflow/training_code.ipynb
+++ b/tensorflow/training_code.ipynb
@@ -43,7 +43,8 @@
     "import load_PSFs\n",
     "\n",
     "import sys\n",
-    "sys.path.append(\"/home/dshteinbok/denoising_experiments/\")\n",
+    "# sys.path.append(\"../data/denoising_experiments/\")\n",
+    "sys.path.append(\"../common/\")\n",
     "import denoising"
    ]
   },
@@ -109,8 +110,8 @@
    "source": [
     "# declare all the variables that control how the model is set up and trained.\n",
     "# Point to the training data:\n",
-    "# target_dir = '/home/dshteinbok/TrainingData/Ground_truth_downsampled/'  # path to objects (ground truth)\n",
-    "# input_dir = '/home/dshteinbok/TrainingData/Simulated_Miniscope_2D_Training_data/'    # path to simulated measurements (inputs to deconv.)\n",
+    "# target_dir = '../data/TrainingData/Ground_truth_downsampled/'  # path to objects (ground truth)\n",
+    "# input_dir = '../data/TrainingData/Simulated_Miniscope_2D_Training_data/'    # path to simulated measurements (inputs to deconv.)\n",
     "\n",
     "target_dir = '../data/nV3_resized/'  # path to objects (ground truth)\n",
     "# input_dir = '../data/nV3_simulated/'    # path to simulated measurements (inputs to deconv.)\n",
@@ -122,8 +123,8 @@
     "#              '../data/nV3_mastermat_probe_unshifted_depth2/',\n",
     "#              '../data/nV3_mastermat_probe_unshifted_depth3/']\n",
     "\n",
-    "# target_dir = '/home/dshteinbok/TrainingData/Ground_truth_downsampled/'\n",
-    "# input_dir = '/home/dshteinbok/TrainingData/Simulated_Miniscope_2D_Training_data/'\n",
+    "# target_dir = '../data/TrainingData/Ground_truth_downsampled/'\n",
+    "# input_dir = '../data/TrainingData/Simulated_Miniscope_2D_Training_data/'\n",
     "\n",
     "# PSF load type: could be \"matlab\"\n",
     "# psf_loadtype = \"matlab\"\n",
@@ -137,17 +138,17 @@
     "multiple_psfs = True\n",
     "\n",
     "# PSF directory, if psf_loadtype==\"csv\"\n",
-    "# psfs_path = '/home/dshteinbok/nV3_PSFs'\n",
-    "# psfs_path = \"/home/dshteinbok/nV3_PSFs_flat_hd\"\n",
-    "psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
-    "psfs_paths = [\"/home/dshteinbok/nV3_PSFs_probe_mark_green\"]\n",
-    "# psfs_paths = [\"/home/dshteinbok/nV3_PSFs_probe_depth1/\", \"/home/dshteinbok/nV3_PSFs_probe_depth2/\", \"/home/dshteinbok/nV3_PSFs_probe_depth3/\"]\n",
-    "# meta_path = '/home/dshteinbok/nV3_PSFs_meta/PSF_Shifts.csv'\n",
-    "# meta_path = \"/home/dshteinbok/nV3_PSFs_flat_meta/metafile_hd.csv\"\n",
-    "meta_path = \"/home/dshteinbok/nV3_PSFs_meta/metafile_probe_mark.csv\"\n",
-    "meta_paths = [\"/home/dshteinbok/nV3_PSFs_probe_depths/metafile_probe_depth1.csv\", \\\n",
-    "              \"/home/dshteinbok/nV3_PSFs_probe_depths/metafile_probe_depth2.csv\",\n",
-    "             \"/home/dshteinbok/nV3_PSFs_probe_depths/metafile_probe_depth3.csv\"]\n",
+    "# psfs_path = '../data/nV3_PSFs'\n",
+    "# psfs_path = \"../data/nV3_PSFs_flat_hd\"\n",
+    "psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
+    "psfs_paths = [\"../data/nV3_PSFs_probe_mark_green\"]\n",
+    "# psfs_paths = [\"../data/nV3_PSFs_probe_depth1/\", \"../data/nV3_PSFs_probe_depth2/\", \"../data/nV3_PSFs_probe_depth3/\"]\n",
+    "# meta_path = '../data/nV3_PSFs_meta/PSF_Shifts.csv'\n",
+    "# meta_path = \"../data/nV3_PSFs_flat_meta/metafile_hd.csv\"\n",
+    "meta_path = \"../data/nV3_PSFs_meta/metafile_probe_mark.csv\"\n",
+    "meta_paths = [\"../data/nV3_PSFs_probe_depths/metafile_probe_depth1.csv\", \\\n",
+    "              \"../data/nV3_PSFs_probe_depths/metafile_probe_depth2.csv\",\n",
+    "             \"../data/nV3_PSFs_probe_depths/metafile_probe_depth3.csv\"]\n",
     "\n",
     "# Pixel size of the images we're dealing with. This must be the same as the desired PSF size. \n",
     "# Program will adjust size of PSFs by linear interpolation as needed, but will only crop images.\n",
@@ -187,7 +188,7 @@
     "    multiple_psfs = False\n",
     "    target_dir = '../data/nV3_resized/'  # path to objects (ground truth)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/'    # path to simulated measurements (inputs to deconv.)\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe/epoch.log\"\n",
     "if preset == 'single_depth_probe_noisy':\n",
@@ -196,7 +197,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_unshifted/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_noisy2/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_noisy2/epoch.log\"\n",
     "    training_noise_sigma=4.2\n",
@@ -206,9 +207,9 @@
     "    input_dirs = ['../data/nV3_mastermat_probe_unshifted_depth1/',\n",
     "             '../data/nV3_mastermat_probe_unshifted_depth2/',\n",
     "             '../data/nV3_mastermat_probe_unshifted_depth3/']\n",
-    "    psfs_paths = [\"/home/dshteinbok/nV3_PSFs_probe_depth1/\", \n",
-    "                  \"/home/dshteinbok/nV3_PSFs_probe_depth2/\", \n",
-    "                  \"/home/dshteinbok/nV3_PSFs_probe_depth3/\"]\n",
+    "    psfs_paths = [\"../data/nV3_PSFs_probe_depth1/\", \n",
+    "                  \"../data/nV3_PSFs_probe_depth2/\", \n",
+    "                  \"../data/nV3_PSFs_probe_depth3/\"]\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_depths/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_depths/epoch.log\"\n",
     "elif preset == 'single_depth_probe_noisy_11':\n",
@@ -218,7 +219,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_unshifted/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_noisy3/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_noisy3/epoch.log\"\n",
     "    training_noise_sigma=11/255\n",
@@ -229,7 +230,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_undistorted_corrected/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_noisy4/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_noisy4/epoch.log\"\n",
     "    training_noise_sigma=11/255\n",
@@ -240,7 +241,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_undistorted_corrected/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_noisy5/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_noisy5/epoch.log\"\n",
     "    crazy_external_noise_addition = True\n",
@@ -253,7 +254,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_undistorted_corrected/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_equivariant/model_weights\"\n",
     "    epochlog_location = \"saved_models/multiwiener_nV3_probe_equivariant/epoch.log\"\n",
     "#     pooling = 'maxblur'\n",
@@ -267,7 +268,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_undistorted_corrected/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "    training_location = \"saved_models/noisy_5_test/model_weights\"\n",
     "    epochlog_location = \"saved_models/noisy_5_test/epoch.log\"\n",
     "    crazy_external_noise_addition = True\n",
@@ -280,7 +281,7 @@
     "    input_dir = '../data/nV3_mastermat_probe_undistorted_corrected/'    # path to simulated measurements (inputs to deconv.)\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted_noisy/'\n",
     "#     input_dir = '../data/nV3_mastermat_probe_unshifted/' # temporary, since we are adding noise on training\n",
-    "    psfs_path = \"/home/dshteinbok/nV3_PSFs_probe_mark_green\"\n",
+    "    psfs_path = \"../data/nV3_PSFs_probe_mark_green\"\n",
     "#     training_location = \"saved_models/multiwiener_nV3_probe_noisy5_new_way/model_weights\"\n",
     "    training_location = \"saved_models/multiwiener_nV3_probe_noisy5_new_way2/model_weights\"\n",
     "#     epochlog_location = \"saved_models/multiwiener_nV3_probe_noisy5/epoch.log\"\n",
@@ -1577,7 +1578,7 @@
    "outputs": [],
    "source": [
     "import imageio\n",
-    "plt.imshow(imageio.imread(\"/home/dshteinbok/noisy_real_images/10.png\"))"
+    "plt.imshow(imageio.imread(\"../data/noisy_real_images/10.png\"))"
    ]
   },
   {
@@ -1632,10 +1633,10 @@
    "outputs": [],
    "source": [
     "to_reconstruct_index = 9\n",
-    "# folderpath = \"/home/dshteinbok/real_images/\"\n",
+    "# folderpath = \"../data/real_images/\"\n",
     "# to_reconstruct = imageio.imread(folderpath+\"image_\"+str(to_reconstruct_index)+\".png\")\n",
-    "# img_path_to_do = \"/home/dshteinbok/denoised_real_images/30.png\"\n",
-    "img_path_to_do = \"/home/dshteinbok/noisy_real_images/40.png\"\n",
+    "# img_path_to_do = \"../data/denoised_real_images/30.png\"\n",
+    "img_path_to_do = \"../data/noisy_real_images/40.png\"\n",
     "to_reconstruct = cv2.resize(imageio.imread(img_path_to_do), (1280, 800))\n",
     "\n",
     "fig, axs = plt.subplots(1,2, figsize=(15,15))\n",
@@ -1659,7 +1660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.imshow(imageio.imread(\"/home/dshteinbok/real_images_unpadded/isxd_9.png\"))"
+    "plt.imshow(imageio.imread(\"../data/real_images_unpadded/isxd_9.png\"))"
    ]
   },
   {
