added comment about only looking at 100 frames

--- a/tensorflow/Large Movie Deconvolution.ipynb
+++ b/tensorflow/Large Movie Deconvolution.ipynb
@@ -227,7 +227,9 @@
    "source": [
     "Now, create the output file and go through the input file frame by frame, pad each one (since it was cropped before I got it) and pass it through the neural network. Write each of these frames into the output file.\n",
     "\n",
-    "I write out the image with pixels each represented by two bytes so that it can later be loaded by the function I already wrote for loading `.ixsd` files' individual frames (namely `load_image2` as shown below)."
+    "I write out the image with pixels each represented by two bytes so that it can later be loaded by the function I already wrote for loading `.ixsd` files' individual frames (namely `load_image2` as shown below).\n",
+    "\n",
+    "Below, I'll only go through processing the first 100 frames to make the process fast as a demonstration. However, you could either replace the `100` in the for loop with whatever you want, or, better yet, write your own script to do the whole-movie deconvolution as presented here and run it."
    ]
   },
   {
